# wasmtime-in-wasm

./: .gitignore  Cargo.toml  input.wat  run.sh
src/: compare_compilation.rs  main.rs  run.rs
