[package]
name = "wasmtime-in-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime-compile = { path = "../../wasmtime/crates/compile" }
wasmtime-environ = { path = "../../wasmtime/crates/environ" }
wasmparser = "0.116.1"
wat = "1.0.80"
target-lexicon = { version = "0.12.12", default-features = false }
